Fixing Image Wrap.

--- a/css/general.css
+++ b/css/general.css
@@ -231,8 +231,8 @@ a {
 }
 
 img {
-  width: 100%;
-  height: auto;
+  max-width: 100%;
+  max-height: auto;
 }
 
 img,
