--- a/css/home.css
+++ b/css/home.css
@@ -64,7 +64,7 @@
   } */
 
 .hero-container {
-  grid-template-columns: minmax(0, 1fr);
+  grid-template-columns: 1fr;
   align-items: center;
   row-gap: var(--g-16-card-item);
 }
@@ -99,15 +99,12 @@
 .hero-img-box {
   background-color: red;
   justify-self: center;
-  min-width: 100%;
-  max-height: 200px;
+  max-width: 100%;
+  max-height: 20rem;
   overflow: hidden;
-  object-fit: cover;
 }
 
 .hero-list-item > a .hero-img-box img {
-  width: 100%;
-  height: 100%;
   transition: var(--transition-e);
 }
 
